# test_task_for_STANDART

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  celery_worker.py  models.py  task.py  views.py
app/swagger/: cancel_transaction.yml  check_transaction.yml  create_transaction.yml
app/templates/: dashboard.html
instance/: test.db
migrations/versions/: 353e68485bfd_init.py
